# e6502

./: CMakeLists.txt  README.md  build.sh
src/: source.cpp
src/Core/: Defines.h
src/Instructions/: ADC.cpp  ADC.h  AND.cpp  AND.h  ASL.cpp  ASL.h  CLC.cpp  CLC.h  CLD.cpp  CLD.h  CLI.cpp  CLI.h  CLV.cpp  CLV.h  DEC.cpp  DEC.h  DEX.cpp  DEX.h  DEY.cpp  DEY.h  EOR.cpp  EOR.h  INC.cpp  INC.h  INX.cpp  INX.h  INY.cpp  INY.h  Instruction.h  Instructions.h  LDA.cpp  LDA.h  LDX.cpp  LDX.h  LDY.cpp  LDY.h  LSR.cpp  LSR.h  ORA.cpp  ORA.h  (+36 more)
src/Memory/: Memory.cpp  Memory.h
src/Processor/: OpCodes.h  Processor.cpp  Processor.h  ProcessorStatus.cpp  ProcessorStatus.h
tests/: BitCheckTests.cpp  CMakeLists.txt  InstructionTests.cpp  OpCodesTests.cpp
